# https_dns_proxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  development_build_with_http3.sh  https_dns_proxy.service.in  vscode_development_setup.md
.github/workflows/: cmake.yml
docs/: LOGGING.md
lib/: CMakeLists.txt
lib/nxjson/: README.md
munin/: https_dns_proxy.config  https_dns_proxy.plugin
src/: constants.h  curlite.c  curlite.h  debug_utils.h  dns_client.h  dns_common.h  dns_listener.h  dns_listener_tcp.c  dns_listener_tcp.h  dns_listener_udp.c  dns_listener_udp.h  dns_packet.c  dns_packet.cc  dns_packet.h  dns_poller.c  dns_poller.h  dns_server.c  dns_server.h  dns_server_tcp.c  dns_server_tcp.h  dns_server_udp.c  dns_server_udp.h  dns_truncate.c  dns_truncate.h  doh_proxy.c  doh_proxy.h  https_client.c  https_client.h  json_to_dns.c  json_to_dns.h  logging.c  logging.h  main.c  main.cc  options.c  options.cc  options.h  request.c  request.h  ring_buffer.c  (+6 more)
test/: dns_packet_test.cc  utils_unittest.cc
tests/docker/: Dockerfile  run_all_tests.sh
tests/robot/: DnsTcpClient.py  functional_tests.robot  valgrind.supp
tests/unit/: CMakeLists.txt  test_logging.c
